# itops-agent-platform

./: 6a3be4b16d544a8bf620028d_AI-Agent技术选型报告-2026Q2.md  README.md  docker-compose.yml  security_best_practices_report.docx
.agents/skills/: AGENTS.md
.asdm/contexts/: index.md
.qoder/agents/: architect.md  developer.md  doc-updater.md  prd-planner.md  req-analyzer.md  reviewer.md
backend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/src/: app.ts
docker/: Dockerfile.backend  nginx.conf
docs/: FILE_MANAGER.md
docs/alert-domain/: apis.md  entities.md
docs/report/: IT运维平台差异化优势与发展路径调研报告.md  itops-platform-differentiation-report.md
docs/workflow/: entities.md  flows.md  services.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
itops-agent-service/: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  run.py  test_quick.py
itops-agent-service/knowledge/: default.yaml
itops-agent-service/src/: __init__.py  config.py  deps.py
itops-agent-service/src/agents/: __init__.py
itops-agent-service/src/api/: __init__.py  agent_registry.py  llm_config_manager.py
itops-agent-service/src/cli/: __init__.py
itops-agent-service/src/knowledge/: __init__.py
itops-agent-service/src/mcp/: __init__.py
itops-agent-service/src/memory/: __init__.py
itops-agent-service/src/tools/: __init__.py
itops-agent-service/tests/: conftest.py  test_agent_registry.py  test_agents.py  test_api_endpoints.py  test_config.py  test_knowledge.py  test_llm_config_manager.py  test_tools.py
(+294 files in other folders)
