[project]
name = "itops-agent-service"
version = "0.1.0"
description = "ITOps Agent Service - 基于PydanticAI的智能运维Agent服务"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "ITOps Team"}
]

dependencies = [
    # 核心框架
    "pydantic-ai>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Web框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    
    # CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    
    # MCP支持
    "mcp>=1.0.0",
    
    # 数据库
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    
    # 向量存储
    "numpy>=1.24.0",
    
    # 工具
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.0.0",
    
    # 异步支持
    "anyio>=4.0.0",
    
    # 日志
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[project.scripts]
itops-agent = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
